--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="carousel-inner">
     
                             <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="https://source.unsplash.com/random/800x600/?sig=1" alt="Primer slide">
+                                <img class="d-block img-fluid" src="https://source.unsplash.com/random/800x600/?sig=1" alt="Primera PArte">
                             </div>
     
                             <div class="carousel-item">
