Cambio Otros datos

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </div>
     
                             <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="https://source.unsplash.com/random/800x600/?sig=8" alt="Tercer slide">
+                                    <img class="d-block img-fluid" src="https://source.unsplash.com/random/800x600/?sig=10" alt="Tercera Parte">
 
                                     <div class="carousel-caption d-none d-md-block">
                                             <h2>Diapositiva 3</h2>
