--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="carousel-inner">
 
                         <div class="carousel-item active" data-duration="100">
-                            <img class="d-block img-fluid" src="https://source.unsplash.com/random/800x600/?sig=1" alt="Primer slide">
+                            <img class="d-block img-fluid" src="generaimagen()" alt="Primer slide">
                         </div>
 
                         <div class="carousel-item" data-duration="1500">
@@ -168,5 +168,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="js/generadorimagenes.js"></script>
+
+</body>
 </html>
